--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<title>Inicio</title>
 		<link rel="stylesheet" href="estilo.css">
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<header><!--NAVEGADOR DONDE IREMOS ALTERNANDO ENTRE PAGINAS, LLEVA UN ID PORQUE SOLO APARECE UNA VEZ-->
@@ -94,7 +93,7 @@
 			<h3>Comparte con nosotros tu visión del tema:</h3>
 			<form action="formulario.php" method="GET" autocomplete="off"><!--FORMULARIO-->
 				<label for="name">Nombre:</label><br><!--LABEL SIRVE PARA DAR TITULO VISUAL A LOS INPUTS-->
-				<input type="text" name="nombre"><!--INPUT SIRVE PARA INTRODUCIR INFORMACION-->
+				<input type="text" name="name"><!--INPUT SIRVE PARA INTRODUCIR INFORMACION-->
 				<br><br>
 				<label for="edad">Edad:</label><br>
 				<input type="number" min="1" max="120" name="edad"><!--EL INPUT TIPO NUMBER PERMITE INTRODUCIR SOLO NÚMEROS Y ADEMÁS PODEMOS LIMITARLOS CON MAX Y MIN-->
